Add more Javadoc